cluster/core/security/authentik/outpost-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  namespace: security
spec:
  rules:
    - host: "*.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /akprox
            pathType: Prefix
            backend:
              # Or, to use an external Outpost, create an ExternalName service and reference that here.
              # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
              service:
                name: ak-outpost-example-outpost
                port:
                  number: 9000
